# modelomics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/modelomics/: PDB.py  __init__.py  atom.py  atom_graph.py  chain.py  cif.py  feature_graph.py  graph.py  pdb.py  prot_graph.py  protein_graph.py  residue.py  residue_graph.py  sequence_embeddings.py  sequences.py  trajectory.py  vdw_point_cloud.py
src/modelomics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/modelomics/bonds/: bonds.py
src/modelomics/metrics/: rmsd.py
src/modelomics/utils/: aa_names.py  atom_colors.py  atom_names.py  topology.py  vdw_radii.py
tests/: test_embeddings.py  test_graph.py
tests/pdbs/: 3ux9.cif
