[project]
name = "modelomics"
version = "0.0.0-beta"
description = "Different Models for Various Protein Design Tasks"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
