[metadata]
name = modelomics
version = 0.0.0b0
description = Tools and models for protein design all in one place
author = A. Clay Richard
author_email = alanclayrichard@gmail.com
url = https://github.com/alanclayrichard/modelomics

[options]
packages = find:
package_dir =
    = src

python_requires = >=3.10
install_requires =
    numpy
    torch
    torch-geometric
    scipy
    biopython>=1.85
    esm>=3.2.0

[options.package_data]
modelomics = utils/*.py

[options.packages.find]
where = src
