[metadata]
name = modelomics
version = 0.0.0b0
description = Tools and models for protein design all in one place
long_description = file: README.md
long_description_content_type = text/markdown
author = A. Clay Richard
author_email = alanclayrichard@gmail.com
url = https://github.com/alanclayrichard/modelomics
project_urls =
    Bug Tracker = https://github.com/alanclayrichard/modelomics/issues
    Documentation = https://github.com/alanclayrichard/modelomics#readme
    Source Code = https://github.com/alanclayrichard/modelomics
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = protein, structural biology, graph neural networks, machine learning, PyTorch, bioinformatics

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False

python_requires = >=3.10
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    torch>=2.0.0
    torch-geometric>=2.3.0
    biopython>=1.85
    prody>=2.4.0
    esm>=3.2.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=1.0.0
    pre-commit>=2.20.0
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    myst-parser>=0.18.0
all =
    %(dev)s
    %(docs)s

[options.package_data]
modelomics = 
    utils/*.py
    py.typed

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --strict-markers --disable-warnings
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests

[coverage:run]
source = src/modelomics
omit = 
    */tests/*
    */test_*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
